SERVER-4384